--- a/styles.css
+++ b/styles.css
@@ -155,17 +155,18 @@ span{
      font-family: 'Roboto';
 }
 
-.news-card-box{
+.news-card-group{
      padding: 0 5px;
      display: flex;
-     flex-wrap: nowrap;
+     flex-wrap: wrap;
      align-items: center;
-     align-items: center;
+     justify-content: space-around;
 }
 
+
 .news-card{
-     margin: 20px;
-     width: 30%;
+     margin: 10px;
+     width: 22%;
      height: 300px;
      display: flex;
      flex-direction: column;
@@ -174,11 +175,49 @@ span{
 .news-image{
      width: 100%;
      height: 250px;
-     background: url('images/fencing.jpg');
-     background-size: cover;
-     background-position: center;
      border-radius: 5px;
      margin-bottom: 20px;
+}
+
+.news-card:nth-child(1) .news-image{
+     background: url('images/fencing.jpg');
+     background-position: center;
+     background-size: cover;
+}
+.news-card:nth-child(2) .news-image{
+     background: url('images/race.jpg');
+     background-position: center;
+     background-size: cover;
+}
+.news-card:nth-child(3) .news-image{
+     background: url('images/swimmer.jpg');
+     background-position: center;
+     background-size: cover;
+}
+.news-card:nth-child(4) .news-image{
+     background: url('images/swims.jpg');
+     background-position: center;
+     background-size: cover;
+}
+.news-card:nth-child(5) .news-image{
+     background: url('images/bike-blur.jpg');
+     background-position: center;
+     background-size: cover;
+}
+.news-card:nth-child(6) .news-image{
+     background: url('images/ball.jpg');
+     background-position: center;
+     background-size: cover;
+}
+.news-card:nth-child(7) .news-image{
+     background: url('images/surf.jpg');
+     background-position: center;
+     background-size: cover;
+}
+.news-card:nth-child(8) .news-image{
+     background: url('images/biker.jpg');
+     background-position: center;
+     background-size: cover;
 }
 
 .news-card-title{
@@ -201,4 +240,18 @@ span{
      color: #949494;
      font-weight: 500;
      font-family: 'Roboto';
+}
+
+#footer{
+     width: 100%;
+     height: 100px;
+     background: #eee;
+     display: flex;
+     align-items: center;
+     justify-content: center;
+}
+
+#footer p{
+     font-family: serif;
+     color: #949494;
 }
