--- a/news.css
+++ b/news.css
@@ -52,6 +52,11 @@ span{
      justify-content: space-between;
 }
 
+.button{
+     cursor: pointer;
+     margin: 10px;
+}
+
 #news-title{
      width: 80%;
      height: 90vh;
@@ -159,13 +164,11 @@ a{
      display: flex;
      flex-wrap: wrap;
      align-items: center;
-     justify-content: space-around;
 }
-
 
 .news-card{
      margin: 10px;
-     width: 22%;
+     width: 23%;
      height: 300px;
      display: flex;
      flex-direction: column;
@@ -174,50 +177,17 @@ a{
 
 .news-image{
      width: 100%;
-     height: 250px;
+     height: 180px;
      border-radius: 5px;
-     margin-bottom: 20px;
+     margin-bottom: 10px;
+     overflow: hidden;
 }
 
-.news-card:nth-child(1) .news-image{
-     background: url('images/fencing.jpg');
-     background-position: center;
-     background-size: cover;
-}
-.news-card:nth-child(2) .news-image{
-     background: url('images/race.jpg');
-     background-position: center;
-     background-size: cover;
-}
-.news-card:nth-child(3) .news-image{
-     background: url('images/swimmer.jpg');
-     background-position: center;
-     background-size: cover;
-}
-.news-card:nth-child(4) .news-image{
-     background: url('images/swims.jpg');
-     background-position: center;
-     background-size: cover;
-}
-.news-card:nth-child(5) .news-image{
-     background: url('images/bike-blur.jpg');
-     background-position: center;
-     background-size: cover;
-}
-.news-card:nth-child(6) .news-image{
-     background: url('images/ball.jpg');
-     background-position: center;
-     background-size: cover;
-}
-.news-card:nth-child(7) .news-image{
-     background: url('images/surf.jpg');
-     background-position: center;
-     background-size: cover;
-}
-.news-card:nth-child(8) .news-image{
-     background: url('images/biker.jpg');
-     background-position: center;
-     background-size: cover;
+.news-image img{
+     width: 100%;
+     height: 100%;
+     object-fit: cover;
+     object-position: 50%;
 }
 
 .news-card-title{
@@ -265,14 +235,6 @@ a{
      #header{
           padding: 10px 40px;
           margin-bottom: -40px;
-     }
-
-     #details{
-          width: 100%;
-     }
-
-     #hot-topics{
-          width: 100%;
      }
 
      .news-report{
