--- a/styles.css
+++ b/styles.css
@@ -331,7 +331,7 @@ a{
 
      .search-box.expand{
           left: 0;
-          width: 768px;
+          width: 98.5%;
      }
 
      .search-button{
@@ -417,8 +417,20 @@ a{
           font-size: 16px;
      }
 
+     .news-card-timeline{
+          flex-direction: column;
+          align-items: flex-start;
+          justify-content: flex-start;
+          margin: 0;
+     }
+
      .card-text{
-          font-size: 10px;
+          margin: 0;
+          font-size: 12px;
+     }
+
+     .card-text:nth-child(2){
+          margin-top: 5px;
      }
 }
 
@@ -440,7 +452,7 @@ a{
      }
 
      .search-box{
-          width: 394px;
+          width: 98%;
           height: 70px;
           position: absolute;
           top: -70px;
@@ -523,16 +535,7 @@ a{
           padding: 0;
      }
 
-     #news-content{
-          border: 1px solid green;
-     }
-
-     #news-card-container{
-          border: 1px solid greenyellow;
-     }
-
      .news-card-group{
-          border: 1px solid red;
           padding: 0;
      }
 
@@ -541,7 +544,6 @@ a{
           width: 100%;
           height: 120px;
           margin: 10px 0;
-          border: 1px solid greenyellow;
      }
      
      .news-image{
@@ -555,7 +557,6 @@ a{
      .news-card-title{
           width: 58%;
           height: 60%;
-          border: 1px solid rebeccapurple;
           position: absolute;
           left: 42%;
      }
@@ -567,7 +568,10 @@ a{
           width: 58%;
           height: 35%;
           margin: 0;
-          border: 1px solid red;
+     }
+
+     .card-text{
+          font-size: 14px;
      }
 
      #footer{
